[package]
name = "vulkano-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.10"
vulkano = { git = "https://github.com/vulkano-rs/vulkano" }

vulkano-shaders = "0.34.0"
winit = "0.29.4"
